# L101-DPO-vs-RLHF

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: pythia-160m-rlhf-dpo.yaml  pythia-31m-rlhf-dpo.yaml  pythia-70m-rlhf-dpo.yaml
docs/: developer_log.md
notebooks/: 02_bias_injection.ipynb  03_model_functions.ipynb  04_dpo_training-pythia-160m.ipynb  04_dpo_training-pythia-31m.ipynb  04_dpo_training-pythia-70m.ipynb  04_dpo_training.ipynb  04_training.ipynb  05_rlhf_training-pythia-160m.ipynb  05_rlhf_training-pythia-31m.ipynb  05_rlhf_training-pythia-70m.ipynb  05_rlhf_training.ipynb  NOTE.md  dpo_160m_training_logs_100_0.csv  dpo_160m_training_logs_50_50.csv  dpo_160m_training_logs_80_20.csv  dpo_31m_training_logs_100_0.csv  dpo_31m_training_logs_50_50.csv  dpo_31m_training_logs_80_20.csv  dpo_70m_training_logs_100_0.csv  dpo_70m_training_logs_50_50.csv  dpo_70m_training_logs_80_20.csv  ppo_160m_training_logs_100_0.csv  ppo_160m_training_logs_50_50.csv  ppo_160m_training_logs_80_20.csv  ppo_31m_training_logs_100_0.csv  ppo_31m_training_logs_50_50.csv  ppo_31m_training_logs_80_20.csv  ppo_70m_training_logs_100_0.csv  ppo_70m_training_logs_50_50.csv  ppo_70m_training_logs_80_20.csv
notebooks/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb
src/data/: bias_injector.py  dataset_loader.py
src/evals/: NOTE.md  run.sh  run_160m.sh  run_31m.sh  run_70m.sh  run_single.sh  run_summarize.sh
src/evals/prod_env/: model_deployments.yaml  (+1 more)
src/models/: pythia_model.py
src/training/: dpo_trainer.py  rlhf_trainer.py  utils.py
